--- a/assets/css/typography.scss
+++ b/assets/css/typography.scss
@@ -160,7 +160,6 @@ main#content {
   h4,
   h5,
   h6 {
-    color: $heading-text-color;
     font-family: $heading-font, sans-serif;
     display: block;
     font-weight: 800;
